--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
 
-*.xml
+venv
+__pycache__
 cmake-build-debug
-client
-cmake-build-debug/.ninja_deps
-cmake-build-debug/.ninja_log
-*.o
-cmake-build-debug/pra1xarxes
-*.log
-*.log
-cmake-build-debug/CMakeFiles/clion-log.txt
-*.xml
+CMakeLists.txt
 client
